language/move-lang/tests/move_check/parser/struct_missing_lbrace.move
module M {
    struct S { f: u64 // }
    fun f() {}
}
